# COMP20003_A2

./: .gitignore  CMakeLists.txt  Makefile  dict.c  map1.c  myCLUE.c  myCLUE.h  myCSV_Parser.c  myCSV_Parser.h  myLinkedList.c  myLinkedList.h  queryfile  sampleOutput.txt  small.csv
data/: queryfile
data/.ipynb_checkpoints/: 1-checkpoint.csv
